--- a/_config.yml
+++ b/_config.yml
@@ -21,12 +21,18 @@ plugins:
 - jemoji
 
 # Site settings
-url: 'https://mydomain.com'
+url: 'https://gyutaehan.sytes.net'
 baseurl: ''
-title: 'My website'
-description: 'This is my new website'
+title: '코딩터'
+description: '지어내는중'
 permalink: pretty
-logo: "https://www.gravatar.com/avatar/6c0377abcf4da91cdd35dea4554b2a4c?s=52"
+logo: "https://www.gravatar.com/avatar/498c4529cde75e50c882bedeb0435464?s=52"
+disqus: "gyutaehan-me" # Blog post comments, uncomment the option and set the site ID from your Disqus account
+# date_format: "%-d %B %Y" # Blog post date formatting using placeholder formatting
+google_analytics: "G-GHFZN8C937"
+# google_analytics_anonymize_ip: ""
+# service_worker: false # Will turn off the service worker if set to false
+# short_name: "Al" # The web application short name, defaults to the site title
 
 # Pagination
 paginate: 5
@@ -51,9 +57,9 @@ collections:
   posts:
     title: Posts
     output: true
-    description: "My thoughts and ideas"
+    description: "코딩터"
     feature_text: |
-      Welcome to my blog
+      코딩터
     feature_image: "https://picsum.photos/2560/600?image=866"
 
 # Collection settings
