--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ title: '코딩터'
 description: '지어내는중'
 permalink: pretty
 logo: "https://www.gravatar.com/avatar/498c4529cde75e50c882bedeb0435464?s=52"
-disqus: "gyutaehan-me" # Blog post comments, uncomment the option and set the site ID from your Disqus account
+disqus: "gyutaehan-sytes-net" # Blog post comments, uncomment the option and set the site ID from your Disqus account
 # date_format: "%-d %B %Y" # Blog post date formatting using placeholder formatting
 google_analytics: "G-GHFZN8C937"
 # google_analytics_anonymize_ip: ""
