--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ plugins:
 - jemoji
 
 # Site settings
-url: 'https://gyutaehan.github.io/blog'
+url: 'https://gyutaehan.github.io/blog/'
 baseurl: '/'
 title: '코딩터'
 description: '지어내는중'
