--- a/_config.yml
+++ b/_config.yml
@@ -45,8 +45,8 @@ paginate_path: blog/page:num
 navigation_header:
 - title: Home
   url: /
-- title: About
-  url: /about/
+- title: Contact
+  url: /contact/
 - title: Blog
   url: /blog/
 
